.k8s/network-policies/allow-app-flows.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress-to-service-gateway
  namespace: dev-web
spec:
  podSelector:
    matchLabels:
      app: service-gateway
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          istio: ingressgateway
    ports:
    - protocol: TCP
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-service-gateway-to-platform-auth
  namespace: dev-web
spec:
  podSelector:
    matchLabels:
      app: service-gateway
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-api
      podSelector:
        matchLabels:
          app: platform-auth-service
    ports:
    - protocol: TCP
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-service-gateway
  namespace: dev-api
spec:
  podSelector:
    matchLabels:
      app: platform-auth-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-web
      podSelector:
        matchLabels:
          app: service-gateway
    ports:
    - protocol: TCP
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apps-to-rabbitmq
  namespace: dev-api
spec:
  podSelector:
    matchLabels:
      app: platform-auth-service
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-infra
      podSelector:
        matchLabels:
          app: rabbitmq
    ports:
    - protocol: TCP
      port: 5672
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-service-gateway-to-rabbitmq
  namespace: dev-web
spec:
  podSelector:
    matchLabels:
      app: service-gateway
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-infra
      podSelector:
        matchLabels:
          app: rabbitmq
    ports:
    - protocol: TCP
      port: 5672
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-apps-to-rabbitmq
  namespace: dev-infra
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-api
      podSelector:
        matchLabels:
          app: platform-auth-service
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-web
      podSelector:
        matchLabels:
          app: service-gateway
    ports:
    - protocol: TCP
      port: 5672
